Core: Navbar - fix navbar-inner z-index

--- a/src/core/components/navbar/navbar.less
+++ b/src/core/components/navbar/navbar.less
@@ -185,6 +185,7 @@
   box-sizing: border-box;
   padding: var(--f7-safe-area-top) calc(var(--f7-navbar-inner-padding-right) + var(--f7-safe-area-right)) 0 calc(var(--f7-navbar-inner-padding-left) + var(--f7-safe-area-left));
   transform: translate3d(0,0,0);
+  z-index: 10;
 }
 .views, .view, .page, .navbars {
   > .navbar {
